--- a/style.css
+++ b/style.css
@@ -3,20 +3,43 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: stretch;
-    gap: 40px;
+    gap: 20px;
     background: #101010;
+}
+
+.infoTxt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 20px;
+    /*margin: auto;*/
+    color: #dbdbe7;
+    font-size: 60px;
+    font-weight: 500;
+    font-family: Lato, sans-serif;
+    white-space: pre-line;
+}
+
+.infoContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 60px;
+    padding: 0 120px;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .choices {
     display: flex;
     flex-direction: row;
     gap: 60px;
-    padding: 20px;
+    padding: 0 20px;
     justify-content: space-around;
     align-items: center;
-    margin: auto;
+    /*margin: auto;*/
 }
 
 .option {
